# logos-tutorial

./: .gitignore  EXTISM_MODULES.md  README.md  index.html  logos-developer-guide.md  run.sh  tutorial-cpp-ui-app.md  tutorial-dev-boost.md  tutorial-qml-ui-app.md  tutorial-rust-module.md  tutorial-wrapping-c-library.md
.github/workflows/: ci.yml
docs/: spec.md
logos-calc-cpp-ui/: CMakeLists.txt  flake.nix  metadata.json  module.yaml
logos-calc-cpp-ui/src/: calc_backend.cpp  calc_backend.h  calc_ui_cpp_plugin.h  (+2 more)
logos-calc-module/: .gitignore  CMakeLists.txt  flake.nix  metadata.json  module.yaml
logos-calc-module/lib/: Makefile  libcalc.c  libcalc.h
logos-calc-module/src/: calc_module_interface.h  calc_module_plugin.cpp  calc_module_plugin.h
logos-calc-ui/: Main.qml  flake.nix  metadata.json
logos-calc-ui-cpp/: .gitignore  CMakeLists.txt  flake.nix  metadata.json
logos-calc-ui-cpp/src/: calc_backend.h  calc_ui_cpp.rep  calc_ui_cpp_plugin.cpp  calc_ui_cpp_plugin.h
logos-calc-ui-cpp/src/qml/: Main.qml
main/: index.html
outputs/: tutorial-composing-modules.md  tutorial-cpp-ui-app.md  tutorial-qml-ui-app.md  tutorial-wrapping-c-library.md
pr-50/: index.html
pr-53/: index.html
pr-54/: index.html
pr-55/: index.html
pr-56/: index.html
pr-57/: index.html
pr-58/: index.html
pr-59/: index.html
pr-60/: index.html
pr-61/: index.html
pr-62/: index.html
pr-63/: index.html
pr-64/: index.html
pr-65/: index.html
pr-66/: index.html
pr-68/: index.html
pr-69/: index.html
pr-70/: index.html
src/: app.jsx  components.jsx  examples.js  parser.js  styles.css  terminal.jsx
tests/: run-tutorial-test.sh  tutorial-composing-modules.test.yaml  tutorial-cpp-ui-app.test.yaml  tutorial-interface-dependencies.test.yaml  tutorial-qml-ui-app.test.yaml  tutorial-wrapping-c-library.test.yaml
tools/: run-tutorial  tutorial_runner.py
(+77 files in other folders)
